--- a/kamal.html
+++ b/kamal.html
@@ -3,6 +3,6 @@
 My name is kamal
 Changes made by local computer
   chages made by git hub
-cross checking completed
+new changes made
 </body>
 </html>
