--- a/kamal.html
+++ b/kamal.html
@@ -1,8 +1,5 @@
 <html>
 <body>
-My name is kamal
-Changes made by local computer
-  chages made by git hub
-new changes made
+This is a new project of github
 </body>
 </html>
