--- a/kamal.html
+++ b/kamal.html
@@ -1,6 +1,7 @@
 <html>
 <body>
 This is a new project of github
-  The change is made from remote server
+The change is made from remote server
+make changes to the file from local server
 </body>
 </html>
